fix: resolve compile errors in OCRController, GitHubAutomationService, and test imports